WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
61570
[debug feature] CSSStyleDeclaration should have a way to print cssText
https://bugs.webkit.org/show_bug.cgi?id=61570
Summary
[debug feature] CSSStyleDeclaration should have a way to print cssText
Ryosuke Niwa
Reported
2011-05-26 15:14:57 PDT
Seriously, I'm tried of gdb crashing on me whenever I call cssText. We should just add a method or global function that prints out the CSS style declaration.
Attachments
Patch
(1.93 KB, patch)
2011-05-26 16:12 PDT
,
Annie Sullivan
no flags
Details
Formatted Diff
Diff
Patch
(1.95 KB, patch)
2011-05-26 16:31 PDT
,
Annie Sullivan
rniwa
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2011-05-26 15:21:11 PDT
Sounds good, just like showTree().
Annie Sullivan
Comment 2
2011-05-26 16:12:27 PDT
Created
attachment 95066
[details]
Patch
Ryosuke Niwa
Comment 3
2011-05-26 16:15:40 PDT
Comment on
attachment 95066
[details]
Patch maybe showStyle or showCssText to follow the convention?
Levi Weintraub
Comment 4
2011-05-26 16:19:28 PDT
(In reply to
comment #3
)
> (From update of
attachment 95066
[details]
) > maybe showStyle or showCssText to follow the convention?
Either show or showStyle have my vote :)
Ryosuke Niwa
Comment 5
2011-05-26 16:20:31 PDT
Comment on
attachment 95066
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=95066&action=review
> Source/WebCore/css/CSSStyleDeclaration.cpp:189 > + fprintf(stderr, "%s", cssText().ascii().data());
Yu need \n after %s.
Annie Sullivan
Comment 6
2011-05-26 16:31:49 PDT
Created
attachment 95069
[details]
Patch
Ryosuke Niwa
Comment 7
2011-05-26 17:08:13 PDT
Committed
r87453
: <
http://trac.webkit.org/changeset/87453
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug