third_party/WebKit/Source/WebCore/css/CSSStyleDeclaration.cpp
@@ -184,4 +184,11 @@ PassRefPtr<CSSMutableStyleDeclaration> CSSStyleDeclaration::copyPropertiesInSet(
     return CSSMutableStyleDeclaration::create(list);
 }
 
+#ifndef NDEBUG
+void CSSStyleDeclaration::showStyle()
+{
+    fprintf(stderr, "%s\n", cssText().ascii().data());
+}
+#endif
+
 } // namespace WebCore
