third_party/WebKit/Source/WebCore/css/CSSStyleDeclaration.h
@@ -73,6 +73,10 @@ public:
 
     PassRefPtr<CSSMutableStyleDeclaration> copyPropertiesInSet(const int* set, unsigned length) const;
 
+#ifndef NDEBUG
+    void showStyle();
+#endif
+
 protected:
     CSSStyleDeclaration(CSSRule* parentRule = 0);
 
